--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bs-node-mau",
   "version": "1.0.0",
   "description": "",
-  "main": "/src/index.js",
+  "main": "./src/index.js",
   "scripts": {
     "start": "node src",
     "dev": "nodemon src",
